# killer-reader

./: Cargo.toml  leontest.json  singlematch.json  watchlist.txt
src/: main.rs  reader.rs  types.rs  watcher.rs
