[package]
name = "killer-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#system

#vital
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = "0.11.20"
tokio = { version = "1.21.2", features = ["full"] }

#misc
clap = "4.4.4"
anyhow = "1.0.75"
log = "0.4.0"
env_logger = "0.10.0"